--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,7 +4,8 @@ on:
     branches:
     - master
   schedule:
-    - cron:  '0 0 * * *'
+    - cron:  '0 0 0 * *'
+    - cron:  '0 0 4 * *'
 jobs:
   run:
     name: Run
