--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,7 +8,7 @@ on:
     - cron:  '0 0 * * 4'
 jobs:
   run:
-    name: Run
+    name: Run wordpress:fpm
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
@@ -25,15 +25,21 @@ jobs:
       shell: bash
       run: |
         ./make.sh
+  run:
+    name: Run wordpress:cron
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Build wordpress:cron container and push to registries
-    env:
-      DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
-      DOCKER_USER: ${{ secrets.DOCKER_USER }}
-      GITHUB_PASS: ${{ secrets.GITHUB_TOKEN }}
-      GITHUB_USER: ${{ github.actor }}
-      REPO: ${{ github.repository }}
-      NAME: wordpress:cron
-      FOLDER: cron
-    shell: bash
-    run: |
-      ./make.sh
+      env:
+        DOCKER_PASS: ${{ secrets.DOCKER_PASS }}
+        DOCKER_USER: ${{ secrets.DOCKER_USER }}
+        GITHUB_PASS: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_USER: ${{ github.actor }}
+        REPO: ${{ github.repository }}
+        NAME: wordpress:cron
+        FOLDER: cron
+      shell: bash
+      run: |
+        ./make.sh
