--- a/fpm/Dockerfile
+++ b/fpm/Dockerfile
@@ -3,6 +3,7 @@ FROM wordpress:fpm
 RUN set -eu \
     # Install pdo_mysql
     ; docker-php-ext-install pdo_mysql \
+    ; docker-php-ext-install intl \
     # Install Memcached
     ; apt update && apt install -y \
         libmemcached-dev \
