--- a/.github/workflows/docker-fpm.yml
+++ b/.github/workflows/docker-fpm.yml
@@ -21,6 +21,7 @@ env:
   GITHUB_REPO: ${{ github.repository }}
   DOCKER_REPO: PLEASECHANGE
   NAME: wordpress-fpm
+  CONTEXT: fpm/
 
 jobs:
   build-and-publish:
@@ -69,7 +70,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           # https://github.com/docker/build-push-action/blob/master/docs/advanced/tags-labels.md
-          context: .
+          context: ${{env.CONTEXT}}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
